# vhl_hackathon

./: README.md
01_led_lighting/: README.md
01_led_lighting/ecbridge_fw/: Cargo.toml  flasher.conf  memory.x  vhrd_tech_72_40.raw
01_led_lighting/ecbridge_fw/.cargo/: config.toml
01_led_lighting/ecbridge_fw/examples/: multi_uri_flat_iter.rs
01_led_lighting/ecbridge_fw/src/: ethernet.rs  logging.rs  main.rs  oled.rs  vhlink.rs  xpi_dispatch.rs
01_led_lighting/ecbridge_fw/vhl/: main.vhl
01_led_lighting/ledmodule_fw/: Cargo.toml
01_led_lighting/rustyclient/: Cargo.toml
01_led_lighting/rustyclient/src/: main.rs
01_led_lighting/vhl_cg/: Cargo.toml
01_led_lighting/vhl_cg/src/: lib.rs  point.rs
01_led_lighting/vhl_stdlib/: Cargo.toml
01_led_lighting/vhl_stdlib/src/: discrete.rs  lib.rs  nibble_buf.rs  q_numbers.rs  serdes.rs  units.rs  varint.rs  xpi.rs  xpi_event.rs  xpi_vlu4.rs
01_led_lighting/vhl_stdlib/src/serdes/: bit_buf.rs  mod.rs  nibble_buf.rs  vlu4.rs
01_led_lighting/vhl_stdlib/src/serdes/vlu4/: array.rs  mod.rs  semver.rs  slice_array.rs
01_led_lighting/vhl_stdlib/src/serdes/xpi_vlu4/: addressing.rs  broadcast.rs  error.rs  mod.rs  multi_uri.rs  node_info.rs  priority.rs  rate.rs  reply.rs  request.rs  resource_info.rs  uri.rs  uri_mask.rs
01_led_lighting/vhl_stdlib/vhl/: signal_slot.vhl
02_can_gps_lora/can_gps_lora/: Cargo.toml  flasher.conf  memory.x
02_can_gps_lora/can_gps_lora/.cargo/: config.toml
02_can_gps_lora/can_gps_lora/src/: lora.rs  main.rs  oled_bw_ssd1306.rs  oled_color_ssd1331.rs  radio.rs  util.rs
