[package]
name = "ecbridge_fw"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
stm32h7xx-hal = { version = "0.12.2", features = ["rt", "stm32h743v", "ethernet"] }
cortex-m-rtic = "1.1.2"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
smoltcp = { version = "^0.8.1", default-features = false, features = [
    #    "log",
    "medium-ethernet",
    #    "medium-ip",
    #    "medium-ieee802154",
    #    "phy-raw_socket",
    "proto-ipv4",
    "proto-ipv6",
    #    "proto-dhcpv4",
    "socket-raw",
    #    "socket-icmp",
    "socket-udp",
    "socket-tcp",
    #    "socket-dhcpv4",
] }
bbqueue = "^0.5.1"
serde = { version = "^1.0.0", default-features = false, features = ["derive"] }
ssmarshal = { version = "^1.0.0", default-features = false }
ssd1306 = "0.7.0"
embedded-graphics = "0.7.1"
#uavcan-llr = { features = ["vhrdcan"], git = "https://github.com/vhrdtech/uavcan-llr.git" }
vhl_stdlib = { path = "../vhl_stdlib" }

[features]
proto-ipv6 = ["smoltcp/proto-ipv6"]

[profile.release]
codegen-units = 1 # better optimizations
debug = false # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"