[package]
name = "can_gps_lora"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "^1.0.0"
nb = "0.1.1"
cortex-m = "0.7"
stm32l4xx-hal = { path = "../../../stm32l4xx-hal", features = ["rt", "stm32l476"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
cortex-m-rtic = "^1.1.3"
dwt-systick-monotonic = { git = "https://github.com/rtic-rs/dwt-systick-monotonic.git", features = ["extend"] }
heapless = "0.5"

embedded-graphics = "0.7.1"
ssd1306 = "^0.7.0"
ssd1331 = "^0.3.0"
tinybmp = "0.3.1"
sx127x_lora = { version = "0.3.1", git = "https://github.com/romixlab/sx127x_lora.git" }

postcard = "0.7.0"
crc-any = { version = "2.3.12", default-features = false }

[dependencies.serde]
version = "1.0.100"
features = ["derive"]
default-features = false

[features]
oled_bw_ssd1306 = []
oled_color_ssd1331 = []